@@ -21,6 +21,7 @@ Date: ???
     - Removed override of Bob's furnaces as this has been implemented in Angel's
     - Disable and hide deep oil settings of cargo ships mod
     - Added platinum to high level modules and circuits
+    - Unhide rocket part to make it easier to view in FNEI
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
